# spin-rust-sdk

./: Cargo.toml  README.md  release-process.md
.cargo/: audit.toml
.github/workflows/: build-examples.yml  build.yml  release.yml
crates/dep-macro/: Cargo.toml
crates/dep-macro/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/macro/src/: lib.rs
crates/spin-sdk/: Cargo.toml
crates/spin-sdk-http/: Cargo.toml
crates/spin-sdk-http/src/: lib.rs
crates/spin-sdk-kv/: Cargo.toml
crates/spin-sdk-kv/src/: lib.rs
crates/spin-sdk-kv/wit/: sdk.wit
crates/spin-sdk-llm/: Cargo.toml
crates/spin-sdk-llm/src/: lib.rs
crates/spin-sdk-llm/wit/: sdk.wit
crates/spin-sdk-macro/: Cargo.toml
crates/spin-sdk-macro/src/: lib.rs
crates/spin-sdk-macro/wit/: sdk.wit
crates/spin-sdk-mqtt/: Cargo.toml
crates/spin-sdk-mqtt/src/: lib.rs
crates/spin-sdk-mqtt/wit/: sdk.wit
crates/spin-sdk-mysql/: Cargo.toml
crates/spin-sdk-mysql/src/: lib.rs
crates/spin-sdk-mysql/wit/: sdk.wit
crates/spin-sdk-pg/: Cargo.toml
crates/spin-sdk-pg/src/: lib.rs
crates/spin-sdk-pg/wit/: sdk.wit
crates/spin-sdk-redis/: Cargo.toml
crates/spin-sdk-redis/src/: lib.rs
crates/spin-sdk-redis/wit/: sdk.wit
crates/spin-sdk-sqlite/: Cargo.toml
crates/spin-sdk-sqlite/src/: lib.rs
crates/spin-sdk-sqlite/wit/: sdk.wit
crates/spin-sdk-variables/: Cargo.toml
crates/spin-sdk-variables/src/: lib.rs
crates/spin-sdk-variables/wit/: sdk.wit
crates/spin-sdk-wasi/: Cargo.toml
crates/spin-sdk-wasi/src/: lib.rs
crates/spin-sdk-wasi/wit/: sdk.wit
crates/spin-sdk/src/: grpc.rs  http.rs  key_value.rs  lib.rs  llm.rs  mqtt.rs  mysql.rs  mysql_async.rs  pg.rs  redis.rs  sqlite.rs  test.rs  time.rs  variables.rs
crates/spin-sdk/src/http/: body.rs  grpc.rs  router.rs
crates/spin-sdk/test-cases/http-router/: Cargo.toml
crates/spin-sdk/test-cases/http-router/src/: lib.rs
crates/spin-sdk/test-cases/simple-http/: Cargo.toml
crates/spin-sdk/test-cases/simple-http/src/: lib.rs
crates/spin-sdk/test-cases/simple-redis/: Cargo.toml
crates/spin-sdk/test-cases/simple-redis/src/: lib.rs
crates/spin-sdk/wit/: sdk.wit
crates/spin-wasip3-http/: Cargo.toml
crates/spin-wasip3-http-macro/: Cargo.toml
crates/spin-wasip3-http-macro/src/: lib.rs
crates/spin-wasip3-http/src/: lib.rs
crates/wasip3-http-ext/: Cargo.toml
crates/wasip3-http-ext/src/: body_writer.rs  lib.rs
examples/dependencies/: spin.toml
examples/dependencies/calculator/: Cargo.toml
examples/dependencies/calculator/src/: lib.rs
examples/dependencies/dependency-consumer/: Cargo.toml  build.rs
examples/dependencies/yellifier/: Cargo.toml
examples/grpc/: Cargo.toml  README.md  build.rs  spin.toml
examples/grpc-streaming/: Cargo.toml  README.md  build.rs  db.sql  spin.toml
examples/grpc-streaming/src/: lib.rs
examples/grpc/proto/: greeter.proto
examples/grpc/src/: lib.rs
examples/hello-world/: Cargo.toml  spin.toml
examples/hello-world/src/: lib.rs
examples/http-axum-router/: Cargo.toml  README.md
examples/http-axum-router/src/: lib.rs
examples/http-concurrent-outbound-calls/: Cargo.toml  spin.toml
examples/http-concurrent-outbound-calls/src/: lib.rs
examples/http-hello-world/: Cargo.toml
examples/http-hello-world/src/: lib.rs
examples/http-middleware/: README.md  spin.toml
examples/http-middleware/middleware/: Cargo.toml
examples/http-middleware/middleware/src/: lib.rs
examples/http-middleware/service/: Cargo.toml
examples/http-outbound/: spin.toml
examples/http-outbound/http-hello/: Cargo.toml
examples/http-outbound/outbound-http/: Cargo.toml
examples/http-outbound/outbound-http-to-same-app/: Cargo.toml
examples/http-router/: spin.toml
examples/http-router-macro/: spin.toml
examples/http-send-request/: Cargo.toml  spin.toml
examples/http-send-request/src/: lib.rs
examples/http-streaming/: Cargo.toml  spin.toml
examples/http-streaming/src/: lib.rs
examples/json-http/: Cargo.toml  spin.toml
examples/key-value/: Cargo.toml  spin.toml
examples/key-value/src/: lib.rs
examples/mqtt-outbound/: Cargo.toml  spin.toml
examples/mqtt-outbound/src/: lib.rs
examples/mysql/: Cargo.toml  README.md  spin.toml
examples/mysql/src/: lib.rs  model.rs
examples/postgres/: Cargo.toml  README.md  spin.toml
examples/postgres-v3/: Cargo.toml  spin.toml
examples/postgres-v4/: Cargo.toml  spin.toml
examples/postgres-v4/src/: lib.rs
examples/postgres/db/: testdata.sql
examples/postgres/src/: lib.rs
examples/redis/: Cargo.toml  spin.toml
examples/redis-async/: spin.toml
examples/redis-outbound/: Cargo.toml  spin.toml
examples/redis-outbound/src/: lib.rs
examples/redis/src/: lib.rs
examples/server-sent-events/: Cargo.toml  README.md  spin.toml
examples/server-sent-events/src/: lib.rs  test.html
examples/sqlite/: Cargo.toml  README.md  spin.toml
examples/sqlite/src/: lib.rs
examples/variables/: Cargo.toml  spin.toml
examples/variables/src/: lib.rs
examples/wasi-http-streaming-file/: Cargo.toml  spin.toml
examples/wasi-http-streaming-outgoing-body/: Cargo.toml  spin.toml
examples/wasip3-competing-outbound-http-calls/: Cargo.toml  spin.toml
examples/wasip3-competing-outbound-http-calls/src/: lib.rs
examples/wasip3-concurrent-outbound-http-calls/: Cargo.toml  spin.toml
examples/wasip3-concurrent-outbound-http-calls/src/: lib.rs
examples/wasip3-http-axum-router/: Cargo.toml  spin.toml
examples/wasip3-http-axum-router/src/: lib.rs
examples/wasip3-http-hello-world/: Cargo.toml  spin.toml
examples/wasip3-http-hello-world/src/: lib.rs
examples/wasip3-http-send-request/: Cargo.toml  spin.toml
examples/wasip3-http-send-request/src/: lib.rs
examples/wasip3-streaming/: Cargo.toml  spin.toml
examples/wasip3-streaming/src/: lib.rs
src/: http.rs  lib.rs  llm.rs  mqtt.rs  mysql.rs  pg.rs  pg3.rs  pg4.rs  redis.rs  sqlite.rs  sqlite3.rs  test.rs  variables.rs
src/http/: conversions.rs  executor.rs  router.rs
test-cases/simple-redis/: Cargo.toml
wit/: sdk.wit  world.wit
(+7 files in other folders)
