[workspace]
resolver = "2"
members = [
  "examples/hello-world",
  "examples/http-axum-router",
  "examples/http-concurrent-outbound-calls",
  "examples/http-hello-world",
  "examples/http-outbound/outbound-http",
  "examples/http-outbound/outbound-http-to-same-app",
  "examples/http-send-request",
  "examples/http-streaming",
  "examples/key-value",
  "examples/mqtt-outbound",
  "examples/mysql",
  "examples/postgres",
  "examples/redis",
  "examples/redis-outbound",
  "examples/variables",
  # "test-cases/simple-http",
  # "test-cases/simple-redis",
  "crates/*",
]

[workspace.package]
version = "5.2.0"
authors = ["Spin Framework Maintainers <cncf-spin-maintainers@lists.cncf.io>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/spinframework/spin-rust-sdk"
rust-version = "1.86"
homepage = "https://spinframework.dev/rust-components"

[workspace.dependencies]
anyhow = "1"
hyperium = { package = "http", version = "1.3.1" }
http-body = "1.0.1"
http-body-util = "0.1.3"
bytes = "1.11.1"
wit-bindgen = "0.54"
futures = "0.3.31"
once_cell = "1.21.3"
thiserror = "2.0.17"
serde_json = "1.0.145"
serde = "1.0.228"