[workspace]
resolver = "2"
members = [
  "examples/grpc",
  "examples/hello-world",
  "examples/http-axum-router",
  "examples/http-concurrent-outbound-calls",
  "examples/http-hello-world",
  "examples/http-outbound/outbound-http",
  "examples/http-outbound/outbound-http-to-same-app",
  "examples/http-send-request",
  "examples/http-streaming",
  "examples/key-value",
  "examples/mqtt-outbound",
  "examples/mysql",
  "examples/postgres",
  "examples/redis",
  "examples/redis-outbound",
  "examples/sqlite",
  "examples/variables",
  # "test-cases/simple-http",
  # "test-cases/simple-redis",
  "crates/spin-sdk",
  "crates/spin-sdk-macro",
]

[workspace.package]
version = "5.2.0"
authors = ["Spin Framework Maintainers <cncf-spin-maintainers@lists.cncf.io>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/spinframework/spin-rust-sdk"
rust-version = "1.93"
homepage = "https://spinframework.dev/rust-components"