[workspace]
resolver = "2"
members = [
  "examples/grpc",
  "examples/grpc-streaming",
  "examples/hello-world",
  "examples/http-axum-router",
  "examples/http-concurrent-outbound-calls",
  "examples/http-hello-world",
  "examples/http-middleware/middleware",
  "examples/http-middleware/service",
  "examples/http-outbound/outbound-http",
  "examples/http-outbound/outbound-http-to-same-app",
  "examples/http-send-request",
  "examples/http-streaming",
  "examples/key-value",
  "examples/mqtt-outbound",
  "examples/mysql",
  "examples/postgres",
  "examples/redis",
  "examples/redis-outbound",
  "examples/server-sent-events",
  "examples/sqlite",
  "examples/variables",
  "crates/spin-sdk",
  "crates/spin-sdk-macro",
]

[workspace.package]
version = "6.0.0"
authors = ["Spin Framework Maintainers <cncf-spin-maintainers@lists.cncf.io>"]
edition = "2024"
readme = "README.md"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/spinframework/spin-rust-sdk"
rust-version = "1.94"
homepage = "https://spinframework.dev/rust-components"