[package]
name = "spin-executor"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/spin-executor"
readme = "README.md"

description = """
Spin SDK async executor
"""

[dependencies]
once_cell = "1.21.3"
futures = "0.3.31"
wasi = { workspace = true }
