[package]
name = "spin-sdk-kv"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
wit-bindgen = { workspace = true }