[package]
name = "spin-sdk-mysql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
wit-bindgen = { workspace = true }