[package]
name = "spin-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/spin-sdk"
readme = "README.md"
description = """
The Spin Rust SDK makes it easy to build Spin components in Rust.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "spin_sdk"

[features]
default = ["export-sdk-language"]
export-sdk-language = []

[dependencies]
spin-sdk-http = { version = "5.1.1", path = "../spin-sdk-http" }
spin-sdk-kv = { version = "5.1.1", path = "../spin-sdk-kv" }
spin-sdk-llm = { version = "5.1.1", path = "../spin-sdk-llm" }
spin-sdk-macro = { version = "5.1.1", path = "../spin-sdk-macro" }
spin-sdk-mqtt = { version = "5.1.1", path = "../spin-sdk-mqtt" }
spin-sdk-mysql = { version = "5.1.1", path = "../spin-sdk-mysql" }
spin-sdk-pg = { version = "5.1.1", path = "../spin-sdk-pg" }
spin-sdk-redis = { version = "5.1.1", path = "../spin-sdk-redis" }
spin-sdk-sqlite = { version = "5.1.1", path = "../spin-sdk-sqlite" }
spin-sdk-variables = { version = "5.1.1", path = "../spin-sdk-variables" }
spin-sdk-wasi = { version = "5.1.1", path = "../spin-sdk-wasi" }
wit-bindgen = { workspace = true }

[dev-dependencies]
http-body-util = "0.1.3"
hyper = "1.7.0"
reqwest = "0.11.27"
tokio = { version = "1.48.0", features = [
  "fs",
  "process",
  "macros",
  "rt-multi-thread",
  "sync",
] }
wasmtime = { version = "43" }
wasmtime-wasi = "43"
wasmtime-wasi-http = "43"
wit-component = "0.245"