[package]
name = "spin-wasip3-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyperium = { workspace = true }
wasip3-http-ext = { version = "5.0.0", path = "../wasip3-http-ext" }