[package]
name = "spin-wasip3-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.93"  # workspace version doesn't suffice for P3
homepage.workspace = true
description = """
Spin WASIp3 HTTP SDK
"""

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyperium = { workspace = true }
wasip3 = { version = "0.4.0", features = ["http-compat"] }
