[package]
name = "grpc-streaming"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures = "0.3"
prost = "0.13"
spin-sdk = { path = "../../crates/spin-sdk", features = ["grpc"] }
tokio-stream = "0.1"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost", "router"] }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
