[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-stream = "0.3"
futures = "0.3"
prost = "0.13"
spin-sdk = { path = "../../crates/spin-sdk", features = ["grpc"] }
tokio-stream = "0.1"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
