[package]
name = "rust-outbound-mysql"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = "Demo of calling MySQL from a Spin application"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# General-purpose crate with common HTTP types.
http = "1.3.1"
serde = "1.0.228"
serde_json = "1.0.145"
# The Spin SDK.
spin-sdk = { path = "../.." }

