[package]
name = "sse"
description = "Demonstrates server-sent events"
version = "0.1.0"
rust-version = "1.90"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1.11.1"
chrono = "0.4"
futures = "0.3.31"
http = "1.3"
http-body = "1"
http-body-util = "0.1.3"
rand = "0.10"
spin-sdk = { path = "../../crates/spin-sdk" }