[package]
name = "wasip3-streaming"
description = "Demonstrates streaming processing of requests and responses"
version = "0.1.0"
rust-version = "1.90"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1.10.1"
futures = "0.3.31"
http = "1.3"
http-body = "1"
http-body-util = "0.1.3"
spin-sdk = { path = "../..", features = ["wasip3-unstable"] }

[workspace]
